tests/baselines/reference/MemberFunctionDeclaration7_es6.errors.txt
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration7_es6.ts(2,4): error TS1220: Generators are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration7_es6.ts (1 errors) ====
    class C {
       *foo<T>() { }
       ~
!!! error TS1220: Generators are only available when targeting ECMAScript 6 or higher.
    }